Estilizando menu do cabeçalho

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="flex-container">
-        <h1>FlexTurismos</h1>
-        <ul class="flex-container">
-            <li><a href="#quem-somos">Quem Somos</a></li>
-            <li><a href="#servicos">Serviços</a></li>
-            <li><a href="#planos">Planos</a></li>
-        </ul>
+    <header>
+        <div class="flex-container header-container">
+            <div class="logo">
+                <h1>FlexTurismos</h1>
+            </div>
+
+            <nav class="menu">
+                <ul class="flex-container list-items">
+                    <li><a href="#quem-somos">Quem Somos</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#planos">Planos</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <div class="flex-container"> <!-- Trocar todas as divs desse nivel por sections-->
@@ -107,7 +114,7 @@
 
     <footer>
         <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+        <p>Desenvolvido por: Athílio Cavalcanti</p>
     </footer>
 </body>
 </html>
