Estilizando section de apresentação

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
     </header>
 
-    <div class="flex-container"> <!-- Trocar todas as divs desse nivel por sections-->
-        <div>
+    <div class="flex-container presentation"> <!-- Trocar todas as divs desse nivel por sections-->
+        <div class="text-presentation">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <a href="#">Saiba Mais!</a>
         </div>
 
         <div>
