Estilizando section 'Quem Somos'

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         </div>
     </div>
 
-    <div class="flex-container">
-        <div>
-            <img src="./images/1-quem-somos.png" alt="balcão de atendimento">
-        </div>
-
+    <div id="quem-somos" class="flex-container about">
         <div>
             <h2>Quem somos</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
             <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+        </div>
+
+        <div>
+            <img src="./images/1-quem-somos.png" alt="balcão de atendimento">
         </div>
     </div>
 
