Estilizando section 'Servicos'

--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
         </div>
     </div>
 
-    <div class="flex-container">
-        <div>
-            <h2>Serviços</h2>
-        </div>
-
-        <div>
+    <div id="servicos" class="external-container">
+        <div class="flex-container services">
             <div>
-                <div><img src="./images/icon-2.png" alt="hospedagens"></div>
-                <p>Hospedagens</p>
-                <a href="#">Comprar Agora</a>
+                <h2>Serviços</h2>
             </div>
 
-            <div>
-               <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
-               <p>Pacotes de viagens</p>
-               <a href="#">Comprar Agora</a>
-            </div>
-
-            <div>
-                <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
-                <p>Roteiros personalizados</p>
-                <a href="#">Comprar Agora</a>
+            <div class="flex-container list-services">
+                <div class="item-service">
+                    <div><img src="./images/icon-2.png" alt="hospedagens"></div>
+                    <p>Hospedagens</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
+                <div class="item-service">
+                   <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
+                   <p>Pacotes de viagens</p>
+                   <a href="#">Comprar Agora</a>
+                </div>
+                <div class="item-service">
+                    <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
+                    <p>Roteiros personalizados</p>
+                    <a href="#">Comprar Agora</a>
+                </div>
             </div>
 
         </div>
