--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="text-presentation">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="#">Saiba Mais!</a>
+            <a class="btn" href="#">Saiba Mais!</a>
         </div>
 
         <div>
@@ -74,47 +74,53 @@
         </div>
     </div>
 
-    <div class="flex-container">
+    <div id="planos" class="flex-container plans">
 
         <div>
-            <h3>Plano 2</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
+            <h2>Planos</h2>
         </div>
 
-        <div>
-            <h3>Plano 2</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-                <li>Roteiro de trilhas</li>
-                <li>Serviço personalizado</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
-        </div>
-
-        <div>
-            <h3>Plano 3</h3>
-            <ul>
-                <li>Suporte 24h</li>
-                <li>Serviços de quarto</li>
-                <li>Guia turístico</li>
-                <li>Roteiro de trilhas</li>
-                <li>Serviço personalizado</li>
-                <li>Área Vip</li>
-            </ul>
-            <a href="#">Saiba Mais!</a>
+        <div class="list-plans">
+            <div class="item-plan">
+                <h3>Plano 1</h3>
+                <ul>
+                    <li>Suporte 24h</li>
+                    <li>Serviços de quarto</li>
+                    <li>Guia turístico</li>
+                </ul>
+                <a class="btn" href="#">Saiba Mais!</a>
+            </div>
+            <div class="item-plan">
+                <h3>Plano 2</h3>
+                <ul>
+                    <li>Suporte 24h</li>
+                    <li>Serviços de quarto</li>
+                    <li>Guia turístico</li>
+                    <li>Roteiro de trilhas</li>
+                    <li>Serviço personalizado</li>
+                </ul>
+                <a class="btn" href="#">Saiba Mais!</a>
+            </div>
+            <div class="item-plan">
+                <h3>Plano 3</h3>
+                <ul>
+                    <li>Suporte 24h</li>
+                    <li>Serviços de quarto</li>
+                    <li>Guia turístico</li>
+                    <li>Roteiro de trilhas</li>
+                    <li>Serviço personalizado</li>
+                    <li>Área Vip</li>
+                </ul>
+                <a class="btn" href="#">Saiba Mais!</a>
+            </div>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Athílio Cavalcanti</p>
+        <div class="flex-container foot">
+            <p>&copy; 2021 CSS Flexbox</p>
+            <p>Desenvolvido por: Athílio Cavalcanti</p>
+        </div>
     </footer>
 </body>
 </html>
