--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <div class="flex-container presentation"> <!-- Trocar todas as divs desse nivel por sections-->
+    <section class="flex-container presentation">
         <div class="text-presentation">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
@@ -33,9 +33,9 @@
         <div>
             <div><img src="./images/0-main.png" alt="banner de apresentação"></div>
         </div>
-    </div>
+    </section>
 
-    <div id="quem-somos" class="flex-container about">
+    <section id="quem-somos" class="flex-container about">
         <div>
             <h2>Quem somos</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
@@ -45,9 +45,9 @@
         <div>
             <img src="./images/1-quem-somos.png" alt="balcão de atendimento">
         </div>
-    </div>
+    </section>
 
-    <div id="servicos" class="external-container">
+    <section id="servicos" class="external-container">
         <div class="flex-container services">
             <div>
                 <h2>Serviços</h2>
@@ -72,9 +72,9 @@
             </div>
 
         </div>
-    </div>
+    </section>
 
-    <div id="planos" class="flex-container plans">
+    <section id="planos" class="flex-container plans">
 
         <div>
             <h2>Planos</h2>
@@ -114,7 +114,7 @@
                 <a class="btn" href="#">Saiba Mais!</a>
             </div>
         </div>
-    </div>
+    </section>
 
     <footer>
         <div class="flex-container foot">
